option java_outer_classname = "LCVehicleBreakdown";
option java_package = "com.navinfo.opentsp.platform.location.protocol.common";

message VehicleBreakdown{
	required int32      breakdownSPNValue		= 1;
	required int32		breakdownFMIValue	    = 2;
    optional int32      spnChangeMode=3;
    optional int32      faultsCount=4;
    optional int32      faultType=5;
}